Fix misalignment between header elements and content caused by overflow scrollbar.

--- a/static/style.css
+++ b/static/style.css
@@ -35,7 +35,7 @@ header > div
     display: flex;
     margin: 0 auto;
     max-width: 100%;
-    width: 780px;
+    width: 800px;
 }
 
 .xkcd-font
@@ -94,19 +94,20 @@ header .xkcd-font
     flex: 1;
     flex-direction: column;
     align-items: center;
-    overflow-y: scroll;
+    overflow-y: auto;
     width: 100%;
 }
 
 #content
 {
     background: #f9f9f9;
-    box-sizing: padding-box;
+    box-sizing: content-box;
     color: #222222;
     flex: 1;
     font-size: 16px;
-    line-height: 1.7em;
+    line-height: 1.75em;
     margin: 0;
+    margin-left: calc(100vw - 100%);
     max-width: 100%;
     padding: 40px 80px;
     text-align: justify;
@@ -133,7 +134,7 @@ header .xkcd-font
 #content h1
 {
     margin: 0 0 1em 0;
-    line-height: 1.7em;
+    line-height: 1.75em;
 }
 
 figure
@@ -151,7 +152,7 @@ p
     background: yellow;
     cursor: help;
     font-variant: small-caps;
-    padding: 2px 4px;
+    padding: 0.25em 0.5em;
     position: relative;
 }
 
